[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/button_base/button_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/help/help.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0705882, 0.0941176, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 0.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="ButtonGroup" id=3]

[node name="Help" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="Tabs" type="PanelContainer" parent="."]
margin_right = 700.0
margin_bottom = 632.0
rect_pivot_offset = Vector2( -297.725, 53.3269 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Scroll" type="ScrollContainer" parent="Tabs"]
margin_right = 700.0
margin_bottom = 632.0

[node name="Margin" type="MarginContainer" parent="Tabs/Scroll"]
margin_right = 700.0
margin_bottom = 632.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Attributes" type="VBoxContainer" parent="Tabs/Scroll/Margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Skills" type="VBoxContainer" parent="Tabs/Scroll/Margin"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Items" type="VBoxContainer" parent="Tabs/Scroll/Margin"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Enemies" type="VBoxContainer" parent="Tabs/Scroll/Margin"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="TabControls" type="PanelContainer" parent="."]
margin_top = 632.0
margin_right = 700.0
margin_bottom = 700.0
custom_styles/panel = SubResource( 4 )

[node name="Container" type="HBoxContainer" parent="TabControls"]
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 68.0
custom_constants/separation = 8

[node name="Attributes" parent="TabControls/Container" instance=ExtResource( 1 )]
margin_right = 187.0
margin_bottom = 60.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 3 )
text = "T_VARIABLES"
prevent_doubleclick = false

[node name="Skills" parent="TabControls/Container" instance=ExtResource( 1 )]
margin_left = 195.0
margin_right = 352.0
margin_bottom = 60.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "T_SCRIPTS"
prevent_doubleclick = false

[node name="Enemies" parent="TabControls/Container" instance=ExtResource( 1 )]
margin_left = 360.0
margin_right = 518.0
margin_bottom = 60.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "T_ENEMIES"
prevent_doubleclick = false

[node name="Items" parent="TabControls/Container" instance=ExtResource( 1 )]
margin_left = 526.0
margin_right = 684.0
margin_bottom = 60.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "T_ITEMS"
prevent_doubleclick = false

[connection signal="toggled" from="TabControls/Container/Attributes" to="." method="_on_Attributes_toggled"]
[connection signal="toggled" from="TabControls/Container/Skills" to="." method="_on_Skills_toggled"]
[connection signal="toggled" from="TabControls/Container/Enemies" to="." method="_on_Enemies_toggled"]
[connection signal="toggled" from="TabControls/Container/Items" to="." method="_on_Items_toggled"]
